erDiagram
    USER ||--|| PLAYER_PROFILE : has
    PLAYER_PROFILE ||--o{ SCORE : earns
    GAME ||--o{ SCORE : contains

    USER {
        int id PK
        string email UK
        datetime created_at
    }

    PLAYER_PROFILE {
        int id PK
        int user_id FK
        string username UK
    }

    GAME {
        int id PK
        string name
        string description
    }

    SCORE {
        int id PK
        int player_id FK
        int game_id FK
        int value
        datetime created_at
    }
